[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/pictures/game_ui/space_background_blue.png" type="Texture" id=1]
[ext_resource path="res://Wave.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/pictures/player/playerShip1_blue_r.png" type="Texture" id=3]
[ext_resource path="res://scripts/game/Space/World.gd" type="Script" id=4]
[ext_resource path="res://scripts/objects/Laser.gd" type="Script" id=5]
[ext_resource path="res://Assets/sound/effects/sfx_laser1.ogg" type="AudioStream" id=6]
[ext_resource path="res://scripts/objects/HomeShield.gd" type="Script" id=7]
[ext_resource path="res://Assets/sound/effects/open_door.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/pictures/enemies/shield1.png" type="Texture" id=9]
[ext_resource path="res://scripts/objects/PlayerShip.gd" type="Script" id=10]
[ext_resource path="res://scripts/objects/Items.gd" type="Script" id=11]
[ext_resource path="res://Assets/sound/effects/sfx_shieldDown.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/pictures/player/engine2.png" type="Texture" id=13]
[ext_resource path="res://Assets/pictures/player/fire04.png" type="Texture" id=14]
[ext_resource path="res://Assets/sound/effects/thrusterFire_003.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 570 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ), Vector2( 3, 570 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 570 ), Vector2( 3, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.375, 285.75 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 50 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 525, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 517, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 308 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15.5, 307.5 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Space" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" parent="." instance=ExtResource( 2 )]
position = Vector2( 1053, 28 )

[node name="HomeShield" type="Area2D" parent="."]
position = Vector2( 53, 15 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="HomeShield"]
margin_right = 3.0
margin_bottom = 570.0
color = Color( 0.247059, 0.592157, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HomeShield/ColorRect"]
anims/RESET = SubResource( 3 )
anims/close = SubResource( 9 )
anims/open = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomeShield"]
position = Vector2( 1.625, 285.25 )
shape = SubResource( 2 )

[node name="sound" type="AudioStreamPlayer" parent="HomeShield"]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="PlayerShip" type="KinematicBody2D" parent="."]
position = Vector2( 25, 300 )
scale = Vector2( 0.6, 0.6 )
collision_mask = 28
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="PlayerShip"]
texture = ExtResource( 3 )

[node name="Engiene" type="TextureRect" parent="PlayerShip/Sprite"]
margin_left = -43.3335
margin_top = 5.0
margin_right = -1.3335
margin_bottom = 45.0
rect_rotation = -90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flame" type="TextureRect" parent="PlayerShip/Sprite"]
visible = false
margin_left = -73.3333
margin_top = 8.33331
margin_right = -33.3333
margin_bottom = 48.3333
rect_rotation = -90.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShip"]
position = Vector2( 3.8147e-06, 0 )
rotation = -7.10543e-15
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PlayerShip"]
stream = ExtResource( 15 )
bus = "stlmenie"

[node name="Laser" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="shield" type="Sprite" parent="Laser"]
rotation = -1.5708
texture = ExtResource( 9 )

[node name="Audio" type="AudioStreamPlayer" parent="Laser"]
stream = ExtResource( 6 )

[node name="PlayerBoundaries" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundaries"]
position = Vector2( 515, 0 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerBoundaries"]
position = Vector2( 507, 600 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerBoundaries"]
position = Vector2( -17, 306 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PlayerBoundaries"]
position = Vector2( 1038, 299 )
shape = SubResource( 8 )

[node name="Items" type="Node" parent="."]
script = ExtResource( 11 )

[node name="sound" type="AudioStreamPlayer" parent="Items"]
stream = ExtResource( 12 )

[connection signal="area_entered" from="HomeShield" to="." method="_on_HomeShield_area_entered"]
[connection signal="body_entered" from="HomeShield" to="." method="_on_HomeShield_body_entered"]
